[package]
name = "hls-playlist"
description = "A library for parsing HLS playlists (aka extended M3U playlists)."
version = "0.1.0"
edition = "2021"
authors = ["Logan Wemyss"]
repository = "https://github.com/raibu-stream/hls-playlist"
license = "Apache-2.0"
keywords = ["hls", "parse", "m3u", "extm3u"]
categories = ["parser-implementations"]

[dependencies]
chrono = "0.4.38"
hex = "0.4.3"
serde = { version = "1.0.201", optional = true }
serde_json = { version = "1.0.117", optional = true }

[dev-dependencies]
rstest = "0.19.0"

[features]
steering-manifest = ["dep:serde", "dep:serde_json"]
